--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -1,9 +1,7 @@
 <% @post_images.each do |post_image| %>
 <div>
   <%= link_to post_image_path(post_image.id) do %>
-   <p>画像</p> <%= attachment_image_tag post_image, :image %>
+  <%= attachment_image_tag post_image, :image, size:"100x100" %>
   <% end %>
-  <p>説明：<%= post_image.introduction %></p><%#ここと下のやつは後で消す！ %>
-  <p>ユーザーネーム：<%= post_image.user.name %></p>
 </div>
 <% end %>
