--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -1,3 +1,5 @@
+<h1>投稿一覧</h1>
+<%= link_to "新規投稿する", new_post_image_path %>
 <% @post_images.each do |post_image| %>
 <div>
   <%= link_to post_image_path(post_image.id) do %>
