--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <p>画像</p><%= attachment_image_tag @post_image, :image, size:"200x200" %>
+  <p><%= attachment_image_tag @post_image, :image, size:"200x200" %></p>
   <p>投稿日時：<%= @post_image.created_at.strftime('%Y/%m/%d') %></p>
   <p>ユーザーネーム：<%= @post_image.user.name %></p>
   <p>説明：<%= @post_image.introduction %></p>
@@ -27,7 +27,6 @@
 <div>
 <p>コメント件数：<%= @post_image.comments.count %></p>
 <% @post_image.comments.each do |comment| %>
-  <p><%=  %></p>
   <%= comment.user.name %>
   <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
   <% if comment.user == current_user %>
