--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,5 +4,12 @@
   <%= attachment_image_tag user, :profile_image, size:"100x100" %>
   <% end %>
   <%= user.name %>
+  <% if current_user != user %>
+    <% if current_user.following?(user)  %>  
+    <%= link_to "フォローを外す", user_relationships_path(user.id), method: :delete %>
+    <% else %>
+    <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
+    <% end %>
+  <% end %>
 </div>
 <% end %>
