--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,28 @@
 <div>
   <h3><%= @user.name %></h3>
   <%= attachment_image_tag @user, :profile_image, size:"100x100" %>
-  <% if @user.id == current_user.id %>
+  <% if user_signed_in? && @user.id == current_user.id %>
    <p><%= link_to "編集", edit_user_path(@user) %></p>
+  <% end %>
+  
+  <% if current_user != @user %>
+    <% if current_user.following?(@user)  %>  
+    <%= link_to "フォローを外す", user_relationships_path(@user.id), method: :delete %>
+    <% else %>
+    <%= link_to "フォローする", user_relationships_path(@user.id), method: :post %>
+    <% end %>
   <% end %>
 </div>
 
+<div>
+  <%= link_to follows_user_path(@user) do %>
+  <h5>フォロー<%= @following_users.count %></h5>
+  <% end %>
+  <%= link_to followers_user_path(@user) do %>
+  <h5>フォロワー<%= @follower_users.count %></h5>
+  <% end %>
+</div>
+<p>投稿画像一覧</p>
 <% @post_images.each do |post_image| %>
 <div>
   <%= link_to post_image_path(post_image.id) do %>
