--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,4 +1,14 @@
-<h1>家財一覧</h1>
+<h1>ジャンル一覧</h1>
+<% @genres.each do |genre| %>
+ <%= link_to genre.name, items_path %>
+<% end %>
+
+<% if params[:genre_id] %>
+ <h1><%= @genre.name %>の家財一覧</h1>
+<% else %>
+ <h1>家財一覧</h1>
+<% end %>
+
 <div>
   <table>
     <thead>
@@ -14,12 +24,12 @@
       <tr>
         <th>
           <%= link_to item_path(item.id) do %>
-          <%= attachment_image_tag item, :item_image, size:"50x50" %>
+          <%= attachment_image_tag item, :item_image, size:"50x50", fallback: "no_image.jpg" %>
           <% end %>
         </th>
         <th><%= item.name %></th>
         <th><%= item.genre.name %></th>
-        <th><%= item.purchase_date  %></th>
+        <th><%= item.purchase_date.strftime('%Y/%m/%d')  %></th>
       </tr>
       <% end %>
     </tbody>
@@ -28,4 +38,4 @@
 
 
 <p><%= link_to "家財新規登録", new_item_path %></th>
-<p><%= link_to "ジャンル一覧", genres_path %>
+<p><%= link_to "ジャンル登録", genres_path %>
