--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -4,7 +4,7 @@
   <%= f.text_field :name %>
   
   <h4>購入年月日</h4>
-  
+  <%= f.date_field :purchase_date %>
   <h4>購入場所</h4>
   <%= f.text_field :store %>
   <h4>金額</h4>
@@ -15,7 +15,7 @@
   <%= f.collection_select(:genre_id, @genres, :id, :name,{prompt: "--選択する--"}) %>
   
   <h4>保証期限</h4>
-
+  <%= f.date_field :warranty_period %>
   <h4>メモ</h4>
   <%= f.text_area :information %>
   
