--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <%= attachment_image_tag @user, :profile_image, size:"100x100" %>
+  <%= attachment_image_tag @item, :item_image, size:"100x100" %>
   <p>家財名：<%= @item.name %></p>
   <p>購入年月日：<%#= @item.purchase_date %></p>
   <p>購入場所：<%= @item.store %></p>
