--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,25 +1,62 @@
+<%= render 'layouts/error', obj: @item %>
+
 <h1>家財情報編集</h1>
 
 <%= form_with model: @item, local:true do |f| %>
-  <h4>家財名</h4>
-  <%= f.text_field :name %>
-  <h4>購入年月日</h4>
-  <%= f.date_field :purchase_date %>
-  <h4>購入場所</h4>
-  <%= f.text_field :store %>
-  <h4>金額</h4>
-  <%= f.text_field :price %><span>円</span>
-  <h4>サイズ</h4>
-  <%= f.text_field :size %>
-  <h4>ジャンル選択</h4>
-  <%= f.collection_select(:genre_id, @genres, :id, :name,{prompt: "--選択する--"}) %>
-  <h4>保証期限</h4>
-   <%= f.date_field :warranty_period %>
-  <h4>メモ</h4>
-  <%= f.text_area :information %>
   
-  <h4>家財の画像</h4>
-  <%= attachment_image_tag @item, :item_image, size:"100x100" %>
-  <%= f.attachment_field:item_image, placeholder:"家財の画像" %>
-  <%= f.submit '更新' %>
+  <div class="form-group">
+    <h4>家財名</h4>
+    <%= f.text_field :name %>
+  </div>
+  
+  <div class="form-group">
+    <h4>購入年月日</h4>
+    <%= f.date_field :purchase_date %>
+  </div>
+  
+  <div class="form-group">
+    <h4>購入場所</h4>
+    <%= f.text_field :store %>
+  </div>
+  
+  <div class="form-group">
+    <h4>金額</h4>
+    <%= f.text_field :price %><span>円</span>
+  </div>
+  
+  <div class="form-group">
+    <h4>サイズ</h4>
+    <%= f.text_field :size %>
+  </div>
+  
+  <div class="form-group">
+    <h4>ジャンル選択</h4>
+    <%= f.collection_select(:genre_id, @genres, :id, :name,{prompt: "--選択する--"}) %>
+  </div>
+  
+  <div class="form-group">
+    <h4>保証期限</h4>
+    <%= f.date_field :warranty_period %>
+  </div>
+  
+  <div class="form-group">
+    <h4>メモ</h4>
+    <%= f.text_area :information %>
+  </div>
+  
+  <div class="form-group">
+    <h4>ステータス</h4>
+    <%= f.radio_button :status, true %>所有中<%= f.radio_button :status, false %>手放す
+  </div>  
+  
+  <div class="form-group">
+    <h4>家財の画像</h4>
+    <%= attachment_image_tag @item, :item_image, size:"100x100" %>
+      <p><%= f.attachment_field:item_image, placeholder:"家財の画像" %></p>
+  </div>
+  
+  <div class="form-group">
+    <%= f.submit '更新' %>
+  </div>
+  
 <% end %>
