--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,27 +1,61 @@
+<%= render 'layouts/error', obj: @item %>
+ 
 <h1>家財新規登録</h1>
 <%= form_with model: @item, local:true do |f| %>
-  <h4>家財名</h4>
-  <%= f.text_field :name %>
+
+  <div class="form-group">
+    <h4>家財名</h4>
+    <%= f.text_field :name %>
+  </div> 
   
-  <h4>購入年月日</h4>
-  <%= f.date_field :purchase_date %>
-  <h4>購入場所</h4>
-  <%= f.text_field :store %>
-  <h4>金額</h4>
-  <%= f.text_field :price %><span>円</span>
-  <h4>サイズ</h4>
-  <%= f.text_field :size %>
-  <h4>ジャンル選択</h4>
-  <%= f.collection_select(:genre_id, @genres, :id, :name,{prompt: "--選択する--"}) %>
+  <div class="form-group">
+    <h4>購入年月日</h4>
+    <%= f.date_field :purchase_date %>
+  </div> 
   
-  <h4>保証期限</h4>
-  <%= f.date_field :warranty_period %>
-  <h4>メモ</h4>
-  <%= f.text_area :information %>
+  <div class="form-group">
+    <h4>購入場所</h4>
+    <%= f.text_field :store %>
+  </div> 
   
-  <h4>家財の画像</h4>
-  <%= f.attachment_field:item_image, placeholder:"家財の画像" %>
+  <div class="form-group">
+    <h4>金額</h4>
+    <%= f.text_field :price %><span>円</span>
+  </div> 
   
   
-  <%= f.submit '投稿' %>
+  <div class="form-group">
+    <h4>サイズ</h4>
+    <%= f.text_field :size %>
+  </div> 
+  
+  <div class="form-group">
+    <h4>ジャンル選択</h4>
+    <%= f.collection_select(:genre_id, @genres, :id, :name,{prompt: "--選択する--"}) %>
+  </div> 
+  
+  <div class="form-group">
+    <h4>保証期限</h4>
+    <%= f.date_field :warranty_period %>
+  </div> 
+  
+  <div class="form-group">
+    <h4>メモ</h4>
+    <%= f.text_area :information %>
+  </div> 
+  
+  <div class="form-group">
+    <h4>家財の画像</h4>
+    <%= f.attachment_field:item_image, placeholder:"家財の画像" %>
+  </div> 
+  
+  <div class="form-group">
+    <h4>ステータス</h4>
+    <%= f.radio_button :status, true %>所有中<%= f.radio_button :status, false %>手放す
+  </div>  
+  
+  <div class="form-group">
+    <%= f.submit '登録' %>
+  </div>
+ 
 <% end %>
