--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,13 +1,13 @@
 <div>
   <%= attachment_image_tag @item, :item_image, size:"100x100" %>
   <p>家財名：<%= @item.name %></p>
-  <p>購入年月日：<%#= @item.purchase_date %></p>
+  <p>購入年月日：<%= @item.purchase_date %></p>
   <p>購入場所：<%= @item.store %></p>
   <p>金額：<%= @item.price %></p>
-  <p>サイズ<%= @item.size %></p>
-  <p>ジャンル<%#= @item.genre %></p>
-  <p>保証期限<%#= @item.warranty_period %></p>
-  <p>メモ<%#= @item.information %></p>
+  <p>サイズ:<%= @item.size %></p>
+  <p>ジャンル:<%= @item.genre.name %></p>
+  <p>保証期限:<%= @item.warranty_period %></p>
+  <p>メモ:<%= @item.information %></p>
 </div>
 <% if user_signed_in? && @item.user_id == current_user.id %>
 <p><%= link_to "編集", edit_item_path(@item) %></p>
