--- a/app/views/post_images/edit.html.erb
+++ b/app/views/post_images/edit.html.erb
@@ -1,8 +1,12 @@
+"
+
 <h1>画像投稿フォーム</h1>
  <h4>画像の変更はできません</h4>
-  <%= attachment_image_tag @post_image, :image %>
+  <%= attachment_image_tag @post_image, :image, size:"100x100" %>
 <%= form_with model: @post_image, local:true do |f| %>
   <h4>説明</h4>
   <%= f.text_area :introduction %>
+  <h4>タグ</h4>
+  <%= f.text_field :tag_list, value: @post_image.tag_list.join(',')%>
   <%= f.submit '更新' %>
 <% end %>
