--- a/app/views/post_images/new.html.erb
+++ b/app/views/post_images/new.html.erb
@@ -1,8 +1,12 @@
+<%= render 'layouts/error', obj: @post_image %>
+
 <h1>画像投稿フォーム</h1>
 <%= form_with model: @post_image, local:true do |f| %>
   <h4>画像</h4>
   <%= f.attachment_field :image %>
   <h4>説明</h4>
   <%= f.text_area :introduction %>
+  <h4>タグ</h4>
+  <%= f.text_field :tag_list, value: @post_image.tag_list.join(',')%>
   <%= f.submit '投稿' %>
 <% end %>
