--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,5 @@
+<%= render 'layouts/error', obj: @user %>
+
 <h2>プロフィール編集</h2>
 <%= form_with model:@user, local:true do |f| %>
   <label for="inputName">Name</label>
