--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -1,53 +1,58 @@
 <%= render 'layouts/error', obj: @comment %>
-
-<div>
-  <p><%= attachment_image_tag @post_image, :image, size:"200x200" %></p>
-  <p>投稿日時：<%= @post_image.created_at.strftime('%Y/%m/%d') %></p>
-  <p>ユーザーネーム：<%= @post_image.user.name %></p>
-  <p>説明：<%= @post_image.introduction %></p>
-  <p>タグ：
-  <% if @tags.present? %>
-    <% @tags.each do |tag| %>
-      <%= link_to tag.name, post_images_path(tag: tag.name) %>
-    <% end %>
-  <% end %>
-  </p>
-  
-  <% if @post_image.user == current_user %>
-   <%= link_to "削除", post_image_path(@post_image), method: :delete, data: {confirm: "本当に削除してよろしいですか？"} %>
-   <%= link_to "編集", edit_post_image_path(@post_image) %>
-  <% end %>
-  
-  <% if @post_image.favorited_by?(current_user) %>
-    <p>
-      <%= link_to post_image_favorites_path(@post_image), method: :delete do %>
-        ♥<%= @post_image.favorites.count %> 
-      <% end %>
-    </p>
-    <% else %>
-    <p>
-      <%= link_to post_image_favorites_path(@post_image), method: :post do %>
-        ♡<%= @post_image.favorites.count %> 
-      <% end %>
-    </p>
-  <% end %>
-</div>
-
-<div>
-<p>コメント件数：<%= @post_image.comments.count %></p>
-<% @post_image.comments.each do |comment| %>
-  <%= comment.user.name %>
-  <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
-  <% if comment.user == current_user %>
-   <div>
-     <%= link_to "削除", post_image_comment_path(comment.post_image, comment), method: :delete %>
+  <% unless user_signed_in? %>
+   <div class="container mt-3">
+    <p>投稿の詳細は会員登録後に見れます</p>
+    <p class="text-center"><%= link_to "新規会員登録はこちら", new_user_registration_path, class: "btn btn-secondary text-white" %> </p>
+    <p class="text-center"><%= link_to "既に会員の方はこちらからログイン", new_user_session_path , class: "btn btn-secondary text-white"%> </p>  
    </div>
+  <% else %>
+  
+    <div class="container mt-4"> 
+      <div class="row">
+        <div class="col-md-6 col-sm-6">
+         <p><%= attachment_image_tag @post_image, :image, size:"200x200" %></p>
+        </div>
+        <div class="col-md-6 col-sm-6">
+          <p>投稿日時：<%= @post_image.created_at.strftime('%Y/%m/%d') %></p>
+          <p>投稿ユーザー：<%= @post_image.user.name %></p>
+          <p>本文：<%= @post_image.introduction %></p>
+          <p>タグ：
+          <% if @tags.present? %>
+            <% @tags.each do |tag| %>
+              <%= link_to tag.name, post_images_path(tag: tag.name) %>
+            <% end %>
+          <% end %>
+          </p>
+          <% if @post_image.user == current_user %>
+           <%= link_to "削除", post_image_path(@post_image), method: :delete, data: {confirm: "本当に削除してよろしいですか？"} %>
+           <%= link_to "編集", edit_post_image_path(@post_image) %>
+          <% end %>
+          <tr id ="post_image_<% @post_image_id %>">
+           <%= render 'favorites/favorite-btn', post_image: @post_image %>
+          </tr>
+          
+        </div>
+      </div>
+    </div> 
+    <div class="container mt-3 mb-3">
+      <table>
+          <p>コメント件数：<%= @post_image.comments.count %></p>
+          <% @post_image.comments.each do |comment| %>
+            <%= comment.user.name %>
+            <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
+            <% if comment.user == current_user %>
+             <div>
+               <%= link_to "削除", post_image_comment_path(comment.post_image, comment), method: :delete %>
+             </div>
+            <% end %>
+          <% end %>
+          </div>
+          <div class="mt-3">
+          <%= form_with(model:[@post_image, @comment], local: true) do |f| %>
+            <%= f.text_area :comment, rows:'5',placeholder: "コメントを入力" %>
+            <p><%= f.submit "送信する" %></p>
+          <% end %>
+          </div>
+        </table>
+    </div>
   <% end %>
-<% end %>
-</div>
-<div>
-<%= form_with(model:[@post_image, @comment], local: true) do |f| %>
-  <%= f.text_area :comment, rows:'5',placeholder: "コメントを入力" %>
-  <%= f.submit "送信する" %>
-<% end %>
-</div>
