--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+  padding-top:54px;
+}
+
+.head{
+  background-image: url("../images/top_image1.jpg");
+  background-size: 100%;
+  background-position: center;
+  width:100%;
+  height:600px;
+}
+
+.h2{
+  font-size: 30px;
+}
