--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,9 +1,10 @@
 <%= render 'layouts/error', obj: @item %>
 
-<h1>家財情報編集</h1>
+<div class="container mt-3 mb-3">
+<h2>家財情報編集</h2>
 
 <%= form_with model: @item, local:true do |f| %>
-  
+
   <div class="form-group">
     <h4>家財名</h4>
     <%= f.text_field :name %>
@@ -58,5 +59,7 @@
   <div class="form-group">
     <%= f.submit '更新' %>
   </div>
-  
+
 <% end %>
+
+</div>
