--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,49 +1,67 @@
-
-
-<h3>ジャンル検索</h3>
-<% @genres.each do |genre| %>
- <%= link_to genre.name, items_path(genre_id: genre.id) %> <!--ジャンルparamsを渡す-->
-<% end %>
-
-<% if params[:genre_id] %>
- <h1>ジャンル "<%= @genre.name %>" 一覧</h1>
-<% else %>
- <h1>所有している家財一覧</h1>
-<% end %>
-<div>
-  <table>
-    <thead>
-      <tr>
-        <th></th>
-        <th>家財名</th>
-        <th>ジャンル</th>
-        <th>購入年月日</th>
-        <th>pdf出力</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @items.each do |item| %>
-      <tr>
-        <th>
-          <% if item.status == true %>  
-          <%= link_to item_path(item.id) do %>
-          <%= attachment_image_tag item, :item_image, size:"50x50", fallback: "no_image.jpg" %>
-          <% end %>
-        </th>
-        <th><%= item.name %></th>
-        <th><%= item.genre.name %></th>
-        <th><%= item.purchase_date.strftime('%Y/%m/%d')  %></th>
-        <th><%= link_to "PDF", item_path(item, format: :pdf)%></th>
-      </tr>
-         <% end %>
-         <% end %>
-    </tbody>
-  </table>
+<div class="container mt-5 mb-3">
+  <div class="row mb-4">
+    <div class="col-md-6 col-sm-8">
+    <% if params[:genre_id] %>
+     <h2>ジャンル "<%= @genre.name %>" 一覧</h2>
+    <% else %>
+     <h2>所有している家財一覧</h2>
+    <% end %>
+    </div>
+    <div class="col-md-6 col-sm-4">
+    <p><%= link_to "家財新規登録", new_item_path %></th>
+    </div>
+  </div>
 </div>
-
-<% unless params[:genre_id] %>
-<p><%= link_to "家財一覧のPDFを出力する", items_path(format: :pdf) %></p>
-<% end %>
-<p><%= link_to "手放した家財一覧", dispose_path %></p>
-<p><%= link_to "家財新規登録", new_item_path %></th>
-<p><%= link_to "ジャンル登録", genres_path %>
+  
+  <div class="container">
+    <table class="table">
+      <thead>
+        <tr>
+          <th></th>
+          <th>家財名</th>
+          <th>ジャンル</th>
+          <th>購入年月日</th>
+          <th>pdf出力</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @items.each do |item| %>
+        <tr>
+          <th>
+            <% if item.status == true %>  
+            <%= link_to item_path(item.id) do %>
+            <%= attachment_image_tag item, :item_image, size:"50x50", fallback: "no_image.jpg" %>
+            <% end %>
+          </th>
+          <th><%= item.name %></th>
+          <th><%= item.genre.name %></th>
+          <th><%= item.purchase_date.strftime('%Y/%m/%d')  %></th>
+          <th><%= link_to "PDF", item_path(item, format: :pdf)%></th>
+        </tr>
+        <% end %>
+        <% end %>
+      </tbody>
+    </table>
+    
+    <% unless params[:genre_id] %>
+    <p class="text-dark"><%= link_to "家財一覧のPDFを出力する", items_path(format: :pdf) %></p>
+    <% end %>
+  </div>
+  
+  <div class="container mt-3 mb-5">
+    <div class="row">
+      <div class="col-md-6 col-sm-4">
+        <h4>ジャンルごとに表示</h3>
+        <div class="row　mr-2">
+          <% @genres.each do |genre| %>
+           <%= link_to genre.name, items_path(genre_id: genre.id) %> <!--ジャンルparamsを渡す-->
+          <% end %>
+        </div>
+        <p><%= link_to "新規ジャンル登録", genres_path %>
+      </div>
+      <div class="col-md-6 col-sm-4">
+        <p><%= link_to "手放した家財一覧", dispose_path %></p>
+      </div>
+    </div>
+  </div>
+ 
