--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,61 +1,67 @@
 <%= render 'layouts/error', obj: @item %>
- 
-<h1>家財新規登録</h1>
-<%= form_with model: @item, local:true do |f| %>
 
-  <div class="form-group">
-    <h4>家財名</h4>
-    <%= f.text_field :name %>
-  </div> 
-  
-  <div class="form-group">
-    <h4>購入年月日</h4>
-    <%= f.date_field :purchase_date %>
-  </div> 
-  
-  <div class="form-group">
-    <h4>購入場所</h4>
-    <%= f.text_field :store %>
-  </div> 
-  
-  <div class="form-group">
-    <h4>金額</h4>
-    <%= f.text_field :price %><span>円</span>
-  </div> 
-  
-  
-  <div class="form-group">
-    <h4>サイズ</h4>
-    <%= f.text_field :size %>
-  </div> 
-  
-  <div class="form-group">
-    <h4>ジャンル選択</h4>
-    <%= f.collection_select(:genre_id, @genres, :id, :name,{prompt: "--選択する--"}) %>
-  </div> 
-  
-  <div class="form-group">
-    <h4>保証期限</h4>
-    <%= f.date_field :warranty_period %>
-  </div> 
-  
-  <div class="form-group">
-    <h4>メモ</h4>
-    <%= f.text_area :information %>
-  </div> 
-  
-  <div class="form-group">
-    <h4>家財の画像</h4>
-    <%= f.attachment_field:item_image, placeholder:"家財の画像" %>
-  </div> 
-  
-  <div class="form-group">
-    <h4>ステータス</h4>
-    <%= f.radio_button :status, true %>所有中<%= f.radio_button :status, false %>手放す
-  </div>  
-  
-  <div class="form-group">
-    <%= f.submit '登録' %>
+<div class="container mt-3 mb-2">
+  <div class="row">
+  <h3>家財新規登録</h3>
+  <p class="text-danger"> *のついている項目は必ず入力ください</p>
   </div>
- 
-<% end %>
+  
+  
+  <%= form_with model: @item, local:true do |f| %>
+  
+    <div class="form-group">
+      <h4>家財名<span class="text-danger">*</span></h4>
+      <%= f.text_field :name,placeholder: "冷蔵庫" %>
+    </div> 
+    
+    <div class="form-group">
+      <h4>購入年月日<span class="text-danger">*</span></h4>
+      <%= f.date_field :purchase_date %>
+    </div> 
+    
+    <div class="form-group">
+      <h4>購入場所</h4>
+      <%= f.text_field :store,placeholder: "ヤマダ電機" %>
+    </div> 
+    
+    <div class="form-group">
+      <h4>金額</h4>
+      <%= f.text_field :price,placeholder: "120,000" %><span>円</span>
+    </div> 
+    
+    <div class="form-group">
+      <h4>サイズ</h4>
+      <%= f.text_field :size ,placeholder: "60x60x175/450リットル"%>
+    </div> 
+    
+    <div class="form-group">
+      <h4>ジャンル選択<span class="text-danger">*</span></h4>
+      <%= f.collection_select(:genre_id, @genres, :id, :name,{prompt: "--選択する--"}) %>
+    </div> 
+    
+    <div class="form-group">
+      <h4>保証期限</h4>
+      <%= f.date_field :warranty_period %>
+    </div> 
+    
+    <div class="form-group">
+      <h4>メモ</h4>
+      <%= f.text_area :information,placeholder: "メーカー名、型番など" %>
+    </div> 
+    
+    <div class="form-group">
+      <h4>家財の画像</h4>
+      <%= f.attachment_field:item_image, placeholder:"家財の画像" %>
+    </div> 
+    
+    <div class="form-group">
+      <h4>ステータス</h4>
+      <%= f.radio_button :status, true %>所有中<%= f.radio_button :status, false %>手放す
+    </div>  
+    
+    <div class="form-group">
+      <%= f.submit '登録' %>
+    </div>
+   
+  <% end %>
+</div>
