--- a/app/views/items/show_pdf.html.erb
+++ b/app/views/items/show_pdf.html.erb
@@ -2,7 +2,7 @@
 <div>
   <%= attachment_image_tag @item, :item_image, size:"100x100" %>
   <p>家財名：<%= @item.name %></p>
-  <p>購入年月日：<%= @item.purchase_date %></p>
+  <p>購入年月日：<%= @item.purchase_date.strftime('%Y/%m/%d') %></p>
   <p>サイズ:<%= @item.size %></p>
 </div>
 
