--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,50 +5,68 @@
     <meta charset="utf-8" />
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
-  <body>
-    <% if user_signed_in? %>
-    　<li>
-        <%= link_to "家財一覧", items_path %>
-      </li>
-      <li>
-        <%= link_to "投稿一覧", post_images_path %>
-      </li>
-      <li>
-        <%= link_to "ユーザー一覧", users_path %>
-      </li>
-
-      <li>
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-      </li>
-      <li>
-        <%= link_to 'マイページ', user_path(current_user.id) %>
-      </li>
-
-
-
-    <% else %>
-      <li>
-        <%= link_to "新規登録", new_user_registration_path %>
-      </li>
-      <li>
-        <%= link_to "ログイン", new_user_session_path %>
-      </li>
-
-       <li>
-        <%= link_to '投稿一覧', post_images_path %>
-      </li>
-
-    <% end %>
+  
+  <body class="d-flex flex-column vh-100">
+    <header class="shadow-sm">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+          <a class="navbar-brand p-3" href="/"><%= image_tag('logo.jpg', size:"50x50" ) %></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+              <% if user_signed_in? %>
+              　<li class="nav-item">
+                  <%= link_to 'マイページ', user_path(current_user.id), class: 'fab fa-pagelines nav-link' %>
+                </li>
+              　<li class="nav-item">
+                  <%= link_to "家財一覧", items_path, class: ' fas fa-chair nav-link' %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "投稿一覧", post_images_path, class: 'fas fa-images nav-link' %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "ユーザー一覧", users_path, class: 'fas fa-users nav-link' %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'fas fa-sign-out-alt fas fa-sign-in-alt nav-link' %>
+                </li>
+                <main class="text-black-50">
+              <% else %>
+                <li class="nav-item">
+                  <%= link_to "新規会員登録", new_user_registration_path, class: 'far fa-hand-point-up nav-link' %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "ログイン", new_user_session_path, class: 'fas fa-sign-in-alt nav-link' %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
     <%= yield %>
-    <footer>
-      <li>
-        <%= link_to 'お問い合せ', inquiry_index_path %>
-      </li>
+    <footer class ="bg-dark text-white pt-5 pb-4">
+      <div class="row">
+        <div class ="col-md-4">
+          <%= image_tag('logo.jpg', size:"50x50")%>
+        </div>
+        <div class ="col-md-5">
+          <p>©2021 Copyright kurashi-memoru.com.</p>
+        </div>
+        <div class ="col-md-3 pull-right">
+          <ul class="list-unstyled">
+            <li>
+              <%= link_to 'お問い合せ', inquiry_index_path , class:"far fa-paper-plane text-white"%>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
 
   </body>
