--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -1,21 +1,21 @@
-<%= link_to "新規投稿する", new_post_image_path %>
-
-<% if @post_image.present? %>
- <h1>タグ"<%= @tag %>"に関する投稿</h1>
-  <% @post_image.each do |post_image| %>
-    <div>
+<div class="container mt-3 mb-3">
+  <% if @post_image.present? %>
+   <h3>タグ"<%= @tag %>"に関する投稿</h3>
+   <%= link_to "新規投稿する", new_post_image_path %>
+    <% @post_image.each do |post_image| %>
       <%= link_to post_image_path(post_image.id) do %>
         <%= attachment_image_tag post_image, :image, size:"100x100" %>
       <% end %>
-    </div>
-  <% end %>
-<% else %>
-　<h1>投稿一覧</h1>
-  <% @post_images.each do |post_image| %>
-    <div>
+    <% end %>
+  <% else %>
+  　<div class="row">
+  　 <h3>投稿一覧</h3>
+  　 <%= link_to "新規投稿する", new_post_image_path %>
+  　</div>
+      <% @post_images.each do |post_image| %>
       <%= link_to post_image_path(post_image.id) do %>
       <%= attachment_image_tag post_image, :image, size:"100x100" %>
       <% end %>
-    </div>
+    <% end %>
   <% end %>
-<% end %>
+</div>
