--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,12 +1,19 @@
-<%= render 'layouts/error', obj: @user %>
-
-<h2>プロフィール編集</h2>
-<%= form_with model:@user, local:true do |f| %>
-  <label for="inputName">Name</label>
-  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
-  <%= attachment_image_tag @user, :profile_image, size:"100x100" %>
-  <label for="inputImage">ProfileImage</label>
-  <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
-  
+<div class="container mt-3 mb-3">
+  <h3>プロフィール編集</h3>
+  <div class="row">
+    <div class="col-md-6 col-sm-6">
+      <%= form_with model:@user, local:true do |f| %>
+      <%= attachment_image_tag @user, :profile_image, size:"100x100" %>
+      <p class="mt-2"><%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %></p>
+    </div>
+    <div class="col-md-6 col-sm-6">
+      <label for="inputName">Name</label>
+      <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
+    </div>
+  </div>
+</div>
+<div class="container text-center mt-3 mb-3">
   <%= f.submit "変更を保存" %>
-<% end %>
+  <% end %>
+</div>
+   
