--- a/app/views/users/follows.html.erb
+++ b/app/views/users/follows.html.erb
@@ -1,10 +1,13 @@
-<%= render 'searchs/form' %>
-<h1>フォロー一覧</h1>
-<% @users.each do |user| %>
-<div>
-  <%= link_to user_path(user.id) do %>
-  <%= attachment_image_tag user, :profile_image, size:"80x80" %>
+<div class="container mt-3 mb-3">
+  
+  <h3>フォロー一覧</h3>
+  <% @users.each do |user| %>
+  <div>
+    <%= link_to user_path(user.id) do %>
+    <%= attachment_image_tag user, :profile_image, size:"80x80" %>
+    <% end %>
+    <%= user.name %>
+  </div>
   <% end %>
-  <%= user.name %>
+
 </div>
-<% end %>
