--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,25 @@
-<p><%= render 'searchs/form' %></p>
-<% @users.each do |user| %>
-<div>
-  <%= link_to user_path(user.id) do %>
-  <%= attachment_image_tag user, :profile_image, size:"100x100" %>
-  <% end %>
-  <%= user.name %>
-  <% if current_user != user %>
-    <% if current_user.following?(user)  %>  
-    <%= link_to "フォローを外す", user_relationships_path(user.id), method: :delete %>
-    <% else %>
-    <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
+<div class="container mt-3 mb-3">
+ <h3>ユーザー一覧</h3>
+ 
+  <% @users.each do |user| %>
+  <table>
+    <tr>
+     <td>
+      <%= link_to user_path(user.id) do %>
+      <%= attachment_image_tag user, :profile_image, size:"100x100" %>
+      <% end %>
+    </td>
+    <td><%= user.name %></td>
+    <td>
+      <% if current_user != user %>
+      <% if current_user.following?(user)  %>  
+      <%= link_to "フォローを外す", user_relationships_path(user.id), method: :delete %>
+      <% else %>
+      <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
+      <% end %>
+    </td>
     <% end %>
+    </tr>
+  </table>
   <% end %>
 </div>
-<% end %>
