--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,27 +1,55 @@
-<div>
-  <h3><%= @user.name %></h3>
-  <%= attachment_image_tag @user, :profile_image, size:"100x100" %>
-  <% if user_signed_in? && @user.id == current_user.id %>
-   <p><%= link_to "編集", edit_user_path(@user) %></p>
-  <% end %>
-  
-  <% if current_user != @user %>
-    <% if current_user.following?(@user)  %>  
-    <%= link_to "フォローを外す", user_relationships_path(@user.id), method: :delete %>
-    <% else %>
-    <%= link_to "フォローする", user_relationships_path(@user.id), method: :post %>
-    <% end %>
+<main>
+ <div class="container mt-3">
+   <% if user_signed_in? && @user.id == current_user.id %>
+    <%= render 'searchs/form' %>
+   <% end %>
+ </div>
+
+<div class="container mt-3">
+  <% if @user.id == current_user%>
+  <h3>マイページ</h3>
+  <% else %>
+  <h3>ユーザー情報</h3>
   <% end %>
 </div>
 
-<div>
-  <%= link_to follows_user_path(@user) do %>
-  <h5>フォロー<%= @following_users.count %></h5>
-  <% end %>
-  <%= link_to followers_user_path(@user) do %>
-  <h5>フォロワー<%= @follower_users.count %></h5>
-  <% end %>
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-md-6 col-sm-6">
+      <%= attachment_image_tag @user, :profile_image, size:"100x100" %>
+       <p><%= @user.name %></p>
+
+      <p class="text-black-50" "border-light">
+      <% if current_user != @user %>
+        <% if current_user.following?(@user)  %>
+        <%= link_to "フォローを外す", user_relationships_path(@user.id), method: :delete %>
+        <% else %>
+        <%= link_to "フォローする", user_relationships_path(@user.id), method: :post %>
+        <% end %>
+      <% end %>
+      </p>
+   </div>
+
+    <div class="col-md-6 col-sm-6">
+      <tr>
+      <%= link_to follows_user_path(@user) do %>
+      <td>フォロー:<%= @following_users.count %></td>
+      <% end %>
+      <%= link_to followers_user_path(@user) do %>
+      <td class="border">フォロワー:<%= @follower_users.count %></td>
+      <% end %>
+      </tr>
+
+      <% if user_signed_in? && @user.id == current_user.id %>
+      <p><%= link_to "ユーザー情報編集", edit_user_path(@user) %></p>
+      <p><%= link_to "いいね一覧", favorites_user_path(@user) %></p>
+      <% end %>
+    </div>
+  </div>
 </div>
+
+
+<div class="container mt-3 mb-3">
 <p>投稿画像一覧</p>
 <% @post_images.each do |post_image| %>
 <div>
@@ -30,3 +58,5 @@
   <% end %>
 </div>
 <% end %>
+
+</div>
