--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,7 +22,7 @@
 
 @font-face{
     font-family:'Corporate-Mincho-ver2';
-    src: font-url('/assets/Corporate-Mincho-ver2.ttf');
+    src: font-url('Corporate-Mincho-ver2.ttf');
 }
 
 header{
