--- a/app/views/searchs/search.html.erb
+++ b/app/views/searchs/search.html.erb
@@ -5,7 +5,7 @@
       <% @records.each do |user| %>
       <div>
         <%= link_to user_path(user.id) do %>
-        <%= attachment_image_tag user, :profile_image, size:"100x100" %>
+        <%= attachment_image_tag user, :profile_image, size:"100x100", fallback: "no_image.jpg" %>
         <% end %>
         <%= user.name %>
         <% if current_user != user %>
