--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,7 +7,7 @@
       <p class="mt-2"><%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %></p>
     </div>
     <div class="col-md-6 col-sm-6">
-      <label for="inputName">Name</label>
+      <label for="inputName">名前</label>
       <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
     </div>
   </div>
