--- a/app/views/users/follows.html.erb
+++ b/app/views/users/follows.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-3 mb-3">
   
-  <h3>フォロー一覧</h3>
+  <h3><%= @user.name %>さんのフォロー一覧</h3>
   <% @users.each do |user| %>
   <div>
     <%= link_to user_path(user.id) do %>
