--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -18,14 +18,14 @@
       <%= image_tag('top_about1.jpg', size:"350x250")  %>
     </div>
     <div class="col-md-6 col-md-6 align: middle">
-      <p>あなたの持っている家財の情報を思い出として残してみましょう。</br>
+      <p>あなたの持っている家財の情報を思い出として残してみましょう。<br>
       買い替えの時や修理が必要な時に登録した情報がきっと役に立つでしょう。
       </p>
     </div>
   </div>
   <div class="row mt-2">
     <div class="col-md-6 col-md-6">
-      <p>登録した家財はPDFとして保存することも可能です。</br>
+      <p>登録した家財はPDFとして保存することも可能です。<br>
       引越業者や譲り先などに家財の情報を簡単に共有できます。
       </p>
     </div>
@@ -38,7 +38,7 @@
       <%= image_tag('top_about3.jpg', size:"350x250")  %>
     </div>
     <div class="col-md-6 col-md-6">
-      <p>インテリア写真を投稿して他のユーザーと繋がってみましょう。</br>
+      <p>インテリア写真を投稿して他のユーザーと繋がってみましょう。<br>
        お家をもっときれいに、過ごしやすくするためのアイデアが見つかるかもしれません。
       </p>
     </div>
