いいね修正

--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -31,9 +31,9 @@
            <%= link_to "削除", post_image_path(@post_image), method: :delete, data: {confirm: "本当に削除してよろしいですか？"} %>
            <%= link_to "編集", edit_post_image_path(@post_image) %>
           <% end %>
-          <tr id ="post_image_<% @post_image_id %>">
+          <div id ="post_image_<%= @post_image.id %>">
            <%= render 'favorites/favorite-btn', post_image: @post_image %>
-          </tr>
+          </div>
         </div>
       </div>
     </div>
