--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -28,21 +28,21 @@
         <% @items.each do |item| %>
         <tr>
           <th>
-            <% if item.status == true %>  
-            <%= link_to item_path(item.id) do %>
-            <%= attachment_image_tag item, :item_image, size:"50x50", fallback: "no_image.jpg" %>
-            <% end %>
+          <% if item.status == true %>  
+          <%= link_to item_path(item.id) do %>
+          <%= attachment_image_tag item, :item_image, size:"50x50", fallback: "no_image.jpg" %>
+          <% end %>
           </th>
           <th><%= item.name %></th>
           <th><%= item.genre.name %></th>
           <th><%= item.purchase_date.strftime('%Y/%m/%d')  %></th>
           <th><%= link_to "PDF", item_path(item, format: :pdf)%></th>
         </tr>
-        <% end %>
+          <% end %>
         <% end %>
       </tbody>
     </table>
-    
+    <%= paginate @items %>
     <% unless params[:genre_id] %>
     <p class="text-dark"><%= link_to "家財一覧のPDFを出力する", items_path(format: :pdf) %></p>
     <% end %>
