--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container mt-4">
   <div class="row">
     <div class="col-md-6 col-sm-6">
-      <%= attachment_image_tag @item, :item_image, size:"200x200", fallback: "no_image.jpg" %>
+      <%= attachment_image_tag @item, :item_image, fallback: "no_image.jpg", class:"image_show" %>
     </div>
     <div class="col-md-6 col-sm-6">
       <p>家財名    :<%= @item.name %></p>
