--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -12,7 +12,7 @@
     </div>
   </div>
 </div>
-  
+
   <div class="container">
     <table class="table">
       <thead>
@@ -28,7 +28,7 @@
         <% @items.each do |item| %>
         <tr>
           <th>
-          <% if item.status == true %>  
+          <% if item.status == true %>
           <%= link_to item_path(item.id) do %>
           <%= attachment_image_tag item, :item_image, size:"50x50", fallback: "no_image.jpg" %>
           <% end %>
@@ -42,12 +42,12 @@
         <% end %>
       </tbody>
     </table>
-    <%= paginate @items %>
+    <div class="center-block"><%= paginate @items %></div>
     <% unless params[:genre_id] %>
     <p class="text-dark"><%= link_to "家財一覧のPDFを出力する", items_path(format: :pdf) %></p>
     <% end %>
   </div>
-  
+
   <div class="container mt-3 mb-5">
     <div class="row">
       <div class="col-md-6 col-sm-4 border">
@@ -64,4 +64,4 @@
       </div>
     </div>
   </div>
- 
+
